runtime/pavex_macros/tests/route/fail/forbid_non_standard_methods.stderr
error: `HEY` is not a standard HTTP method.
 --> tests/route/fail/forbid_non_standard_methods.rs:3:1
  |
3 | #[route(path = "/one", method = "HEY")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `route` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `HEY` is not a standard HTTP method.
 --> tests/route/fail/forbid_non_standard_methods.rs:6:1
  |
6 | #[route(path = "/multi", method = ["HEY", "GET"])]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `route` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `HEY` is not a standard HTTP method.
 --> tests/route/fail/forbid_non_standard_methods.rs:9:1
  |
9 | #[route(path = "/multi_invalid", method = ["HEY", "CuStOm"])]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `route` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `CuStOm` is not a standard HTTP method.
 --> tests/route/fail/forbid_non_standard_methods.rs:9:1
  |
9 | #[route(path = "/multi_invalid", method = ["HEY", "CuStOm"])]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `route` (in Nightly builds, run with -Z macro-backtrace for more info)
